--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard | ActTrack</title>
-    <link rel="stylesheet" href="dashboard-student.css">
+    <link rel="stylesheet" href="dashboard-faculty.css">
 </head>
 <body>
     <div class="overlay"></div>
     <div class="header-container">
-        <h1 id="header">Dashboard</h1>
+        <div class="title-container">
+            <h1 id="header">Dashboard</h1>
+            <p class="subtitle">Faculty</p>
+        </div>
         <img src="logo-web.png" alt="logo" width="100" height="100" class="logo-img">
     </div>
     <div class="nav-container">
