--- a/html/class-list.html
+++ b/html/class-list.html
@@ -4,20 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard | ActTrack</title>
-    <link rel="stylesheet" href="class-list.css">
+    <link rel="stylesheet" href="../css/class-list.css">
+    <link rel="stylesheet" href="../misc/fonts.css">
+    <link rel="stylesheet" href="../misc/all.min.css">
+    <link rel="stylesheet" href="../misc/fontawesome.min.css">
 </head>
 <body>
     <header class="header-container">
         <h1 id="header">Class List</h1>
-        <img src="logo-web.png" alt="logo" width="100" height="100" class="logo-img">
     </header>
-    <nav class="nav-container">
-        <ul>
-            <li><a href="#">Attendance</a></li>
-            <li><a href="#">Grades</a></li>
-            <li><a href="#">Profile</a></li>
-        </ul>
-    </nav>
+
     <main class="main-container">
         <section class="card">
             <div class="title-container">
@@ -112,6 +108,6 @@
             Back to Dashboard
         </button>
     </main>
-    <script src="classlist.js"></script>
+    <script src="../js/classlist.js"></script>
 </body>
 </html>
