--- a/html/profile-faculty.html
+++ b/html/profile-faculty.html
@@ -23,8 +23,7 @@
     <aside>
         <h1>User Profile</h1>
         <nav class="sidenav">
-            <a href="../html/dashboard-student.html">Dashboard</a>
-            <a href="#" class="active2">User info</a>
+            <a href="../html/dashboard.html">Dashboard</a>
             <a href="#">Support</a>
             <a href="#">Settings</a>
             <a href="#">Notifications</a>
@@ -38,38 +37,35 @@
                 <img src="../images/tristan.png" width="150px" height="auto">
                 <div class="info">
                     <p class="name">Tristan D. Acosta</p>
-                    <p class="idno">12223MN-000401</p>
-                    <p class="prog">BSAIS 2-1</p>
+                    <p class="studno">12223MN-000401</p>
+                    <p class="section">BSAIS 2-1</p>
                 </div>
             </div>
         </div>
 
         <div class="border">
-            <button type="submit" class="edit-btn">Edit your information</button>
-            <button type="submit" class="end-editing">Done</button>
+            <button>Edit</button>
             <h1 class="mainheading">Personal Information</h1>
             <div class="container">
                 <div class="left">
                     <div class="top">
-                        <p class="heading" id="fname">First Name</p>
-                        <p class="text editable">Tristan</p>
+                        <p class="heading">First Name</p>
+                        <p class="text">Tristan</p>
                     </div>
                     <div class="top">
                         <p class="heading">Email Address</p>
-                        <p class="text editable">tristanacosta03@gmail.com</p>
+                        <p class="text">tristanacosta03@gmail.com</p>
                     </div>
                 </div>
                 <div class="right">
                     <div class="top">
-                        <p class="heading" id="lname">Last Name</p>
-                        <p class="text editable">Acosta</p>
-                        <br>
-                        <p class="heading" id="Mname">MI</p>
-                        <p class="text editable">D.</p>
+                        <p class="heading">Last Name</p>
+                        <p class="text">Acosta</p>
+
                     </div>
                     <div class="top">
                         <p class="heading">Phone</p>
-                        <p class="text editable">09123456789</p>
+                        <p class="text">09123456789</p>
                     </div>
                 </div>
                 <div>
@@ -79,27 +75,28 @@
         </div>
 
         <div class="border">
+            <button>Edit</button>
             <h1 class="mainheading">Address</h1>
             <div class="container">
                 <div class="left">
                     <div class="top">
                         <p class="heading">Country</p>
-                        <p class="text editable">Philippines</p>
+                        <p class="text">Philippines</p>
                     </div>
                     <div class="top">
                         <p class="heading">Postal Code</p>
-                        <p class="text editable">1704</p>
+                        <p class="text">1704</p>
                     </div>
                 </div>
                 <div class="right">
                     <div class="top">
                         <p class="heading">City</p>
-                        <p class="text editable">Parañaque City</p>
+                        <p class="text">Parañaque City</p>
 
                     </div>
                     <div class="top">
                         <p class="heading">Region</p>
-                        <p class="text editable">Metro Manila</p>
+                        <p class="text">Metro Manila</p>
                     </div>
                 </div>
                 <div>
@@ -107,8 +104,7 @@
                 </div>
             </div>
         </div>
-        
-        <script src="../js/edit-btn.js"></script>
     </main>
 </body>
+
 </html>
