--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -4,41 +4,139 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard | ActTrack</title>
-    <link rel="stylesheet" href="dashboard-faculty.css">
+    <link rel="stylesheet" href="../css/dashboard-faculty.css">
+    <link rel="stylesheet" href="../misc/fonts.css">
+    <link rel="stylesheet" href="../misc/all.min.css">
+    <link rel="stylesheet" href="../misc/fontawesome.min.css">
+    <link rel="stylesheet" href="../css/file-upload.css">
 </head>
 <body>
-    <div class="overlay"></div>
     <div class="header-container">
         <div class="title-container">
             <h1 id="header">Dashboard</h1>
             <p class="subtitle">Faculty</p>
         </div>
-        <img src="logo-web.png" alt="logo" width="100" height="100" class="logo-img">
     </div>
     <div class="nav-container">
         <ul>
             <li><a href="#">Attendance</a></li>
-            <li><a href="#">Grades</a></li>
-            <li><a href="#">Profile</a></li>
+            <li><a href="#">Submit Grades</a></li>
+            <li><a href="../html/profile-faculty.html">Profile</a></li>
         </ul>
     </div>
 
     <div class="main-container">
-        <div class="card">
+        <div class="card" id="card-1">
             <div class="title-container">
                 <h2>Registered Students</h2>
                 <h3 id="get-registered-students"></h3>
             </div>
-            <p><a href="class-list.html" id="class-list">view class list</a></p>
+            <p><a href="../html/class-list.html" id="class-list">view class list</a></p>
         </div>
-        <div class="card">
-            <h2>Card 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="card" id="card-2">
+            <h2>Class Record</h2>
         </div>
-        <div class="card">
-            <h2>Card 3</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <div class="card" id="card-3">
+            <h2>Files</h2>
+            <!-- Create a table to display the list of uploaded files -->
+            <table id="file-table">
+                <thead>
+                <tr>
+                    <th>File Name</th>
+                    <th>File Size</th>
+                    <th>Upload Date</th>
+                </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+            <!-- Create a form with a file input and a submit button -->
+            <form id="upload-form">
+                <input type="file" id="file-input" />
+                <button id="upload-button">Upload File</button>
+                <div id="upload-status"></div>
+            </form>
+        </div>
+        <div class="card" id="card-4">
+            <div class="wrapper">
+                <div class="container-calendar">
+                    <div id="left">
+                        <h1>Calendar</h1>
+                        <div id="event-section">
+                            <h3>Add Event</h3>
+                            <input type="date" id="eventDate">
+                            <input type="text"
+                                id="eventTitle"
+                                placeholder="Event Title">
+                            <input type="text"
+                                id="eventDescription"
+                                placeholder="Event Description">
+                            <button id="addEvent" onclick="addEvent()">
+                                Add
+                            </button>
+                        </div>
+                        <div id="reminder-section">
+                            <h3>Reminders</h3>
+                            <!-- List to display reminders -->
+                            <ul id="reminderList">
+                                <li data-event-id="1">
+                                    <strong>Event Title</strong>
+                                    - Event Description on Event Date
+                                    <button class="delete-event"
+                                        onclick="deleteEvent(1)">
+                                        Delete
+                                    </button>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div id="right">
+                        <!--calendar-->
+                        <h3 id="monthAndYear"></h3>
+                        <div class="button-container-calendar">
+                            <button id="previous"
+                                    onclick="previous()">
+                                  ‹
+                              </button>
+                            <button id="next"
+                                    onclick="next()">
+                                  ›
+                              </button>
+                        </div>
+                        <table class="table-calendar"
+                               id="calendar"
+                               data-lang="en">
+                            <thead id="thead-month"></thead>
+                            <!-- Table body for displaying the calendar -->
+                            <tbody id="calendar-body"></tbody>
+                        </table>
+                        <div class="footer-container-calendar">
+                            <label for="month">Jump To: </label>
+                            <!-- Dropdowns to select a specific month and year -->
+                            <select id="month" onchange="jump()">
+                                <option value=0>Jan</option>
+                                <option value=1>Feb</option>
+                                <option value=2>Mar</option>
+                                <option value=3>Apr</option>
+                                <option value=4>May</option>
+                                <option value=5>Jun</option>
+                                <option value=6>Jul</option>
+                                <option value=7>Aug</option>
+                                <option value=8>Sep</option>
+                                <option value=9>Oct</option>
+                                <option value=10>Nov</option>
+                                <option value=11>Dec</option>
+                            </select>
+                            <!-- Dropdown to select a specific year -->
+                            <select id="year" onchange="jump()"></select>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+    <script src="../js/file-upload.js"></script>
+    <script src="../js/calendar.js"></script>
+    <script src="../js/files.js"></script>
+    <script src="../js/server.js"></script>
 </body>
 </html>
