--- a/html/profile.html
+++ b/html/profile.html
@@ -38,8 +38,8 @@
                 <img src="../images/tristan.png" width="150px" height="auto">
                 <div class="info">
                     <p class="name">Tristan D. Acosta</p>
-                    <p class="idno">12223MN-000401</p>
-                    <p class="prog">BSAIS 2-1</p>
+                    <p class="idno editable">12223MN-000401</p>
+                    <p class="prog editable">BSAIS 2-1</p>
                 </div>
             </div>
         </div>
