--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -11,20 +11,15 @@
     <link rel="stylesheet" href="../css/file-upload.css">
 </head>
 <body>
-    <div class="header-container">
+    <div class="header-container topnav">
         <div class="title-container">
             <h1 id="header">Dashboard</h1>
             <p class="subtitle">Faculty</p>
         </div>
+        <a href="../html/attendance-student.html">Attendance</a>
+        <a href="../html/grades.html">Encode Grades</a>
+        <a href="../html/profile-faculty.html">Profile</a>
     </div>
-    <div class="nav-container">
-        <ul>
-            <li><a href="#">Attendance</a></li>
-            <li><a href="#">Submit Grades</a></li>
-            <li><a href="../html/profile-faculty.html">Profile</a></li>
-        </ul>
-    </div>
-
     <div class="main-container">
         <div class="card" id="card-1">
             <div class="title-container">
@@ -35,6 +30,7 @@
         </div>
         <div class="card" id="card-2">
             <h2>Class Record</h2>
+            <p><a href="../html/class-record.html" id="class-list">view class record</a></p>
         </div>
         <div class="card" id="card-3">
             <h2>Files</h2>
@@ -137,6 +133,5 @@
     <script src="../js/file-upload.js"></script>
     <script src="../js/calendar.js"></script>
     <script src="../js/files.js"></script>
-    <script src="../js/server.js"></script>
 </body>
 </html>
