--- a/html/profile-faculty.html
+++ b/html/profile-faculty.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <a href="#"><!--link to homepage / dashboard-->
+        <a href="../html/dashboard.html"><!--link to homepage / dashboard-->
         <h1>ActTrack</h1></a>
         <nav class="topnav"> 
             <a href="#">Attendance</a>
