--- a/html/profile.html
+++ b/html/profile.html
@@ -11,11 +11,10 @@
 </head>
 <body>
     <header>
-        <a href="#"><!--link to homepage / dashboard-->
+        <a href="../html/dashboard-student.html"><!--link to homepage / dashboard-->
         <h1>ActTrack</h1></a>
         <nav class="topnav"> 
-            <a href="#">Attendance</a>
-            <a href="#">Grades</a>
+            <a href="../html/dashboard-student.html">Dashboard</a>
             <a href="#" class="active">Profile</a>
         </nav>
     </header>
@@ -23,14 +22,11 @@
     <aside>
         <h1>User Profile</h1>
         <nav class="sidenav">
-            <a href="../html/dashboard-student.html">Dashboard</a>
             <a href="#" class="active2">User info</a>
-            <a href="#">Support</a>
-            <a href="#">Settings</a>
-            <a href="#">Notifications</a>
         </nav>
         <a href="../html/login.html">
-        <p class="logout">Log out</p></a>
+            <p class="logout">Log out</p>
+        </a>
     </aside>
     <main>
         <div class="border">
