--- a/html/dashboard-student.html
+++ b/html/dashboard-student.html
@@ -119,11 +119,9 @@
             </div>
         </div>
         <div class="card">
-            <div id="#myDIV" class="header">
+            <button id="#myDIV" class="header" onclick="location.href='../html/to-do.html';">
                 <h2>To-do List</h2>
-                <input type="text" id="myInput" placeholder="Things to do">
-                <span onclick="newElement()" class="addBtn">Add</span>
-            </div>
+            </button>
             <ul id="myUL">
             </ul>
         </div>
