--- a/html/to-do.html
+++ b/html/to-do.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <header>
-        <h1>ActTrack</h1>
+        <a href="../html/dashboard-student.html">
+        <h1>ActTrack</h1></a>
         <nav class="topnav"> 
             <a href="#">Attendance</a>
             <a href="#">Grades</a>
