--- a/html/to-do_done.html
+++ b/html/to-do_done.html
@@ -11,10 +11,9 @@
 </head>
 <body>
     <header>
-        <h1>ActTrack</h1>
+        <a href="../html/dashboard-student.html">
+        <h1>ActTrack</h1></a>
         <nav class="topnav"> 
-            <a href="#">Attendance</a>
-            <a href="#">Grades</a>
             <a href="../html/profile.html">Profile</a>
             <a href="../html/to-do.html" class="active">To-Do</a>
         </nav>
