--- a/html/attendance-student.html
+++ b/html/attendance-student.html
@@ -16,18 +16,68 @@
             <h1>ActTrack</h1>
         </a>
         <nav class="topnav">
-            <a href="#" class="active">Attendance</a>
-            <a href="#">Grades</a>
+            <a href="../html/attendance-student.html" class="active">Attendance</a>
+            <a href="../html/grades.html">Grades</a>
             <a href="../html/profile.html">Profile</a>
+            <a href="../html/login.html" id="logout">Logout</a>
         </nav>
     </header>
 
-    <main>
-        <table>
-            <thead>
-                <td></td>
-            </thead>
-        </table>
-    </main>
+    <main class="main-container">
+        <div class="card">
+            <h1>Attendance</h1>
+            <!--
+            <table id="class-list-table-1" class="class-list-table">
+                <thead>
+                    <tr>
+                        <th>Subject ID</th>
+                        <th>Subject Description</th>
+                        <th>Instructor</th>
+                        <th>Units</th>
+                        <th>Prelim</th>
+                        <th>Midterm</th>
+                        <th>Final</th>
+                        <th>GWA</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>IS221</td>
+                        <td>Web Design Development</td>
+                        <td>Ricafort, Sheryl Ann B.</td>
+                        <td>3</td>
+                        <td>85</td>
+                        <td>90</td>
+                        <td>92</td>
+                        <td><b>89.33</b></td>
+                    </tr>
+                    <tr>
+                        <td>AIS223</td>
+                        <td>Advance Airline Ticketing</td>
+                        <td>Caguia, Cielito M.</td>
+                        <td>3</td>
+                        <td>80</td>
+                        <td>85</td>
+                        <td>90</td>
+                        <td><b>85.00</b></td>
+                    </tr>
+                    <tr>
+                        <td>IS222</td>
+                        <td>System Analysis and Design</td>
+                        <td>Dasalla, Jerum B.</td>
+                        <td>3</td>
+                        <td>86</td>
+                        <td>90</td>
+                        <td>94</td>
+                        <td><b>90.00</b></td>
+                    </tr>
+                </tbody>
+            </table>
+            -->
+            <br>
+            <button class="class-list-btn" onclick="location.href = './dashboard-student.html'">
+                Back to Dashboard
+            </button>
+        </div>
 </body>
 </html>
