--- a/html/to-do.html
+++ b/html/to-do.html
@@ -14,8 +14,7 @@
         <a href="../html/dashboard-student.html">
         <h1>ActTrack</h1></a>
         <nav class="topnav"> 
-            <a href="#">Attendance</a>
-            <a href="#">Grades</a>
+            <a href="../html/dashboard-student.html">Dashboard</a>
             <a href="../html/profile.html">Profile</a>
             <a href="../html/to-do.html" class="active">To-Do</a>
         </nav>
