--- a/html/dashboard-student.html
+++ b/html/dashboard-student.html
@@ -14,6 +14,7 @@
         <a href="../html/dashboard-student.html"><!--link to homepage / dashboard-->
         <h1>ActTrack</h1></a>
         <nav class="topnav"> 
+            <a href="../html/dashboard-student.html" class="active">Dashboard</a>
             <a href="../html/attendance-student.html">Attendance</a>
             <a href="./grades.html">Grades</a>
             <a href="../html/profile.html">Profile</a>
