--- a/html/to-do_done.html
+++ b/html/to-do_done.html
@@ -14,6 +14,7 @@
         <a href="../html/dashboard-student.html">
         <h1>ActTrack</h1></a>
         <nav class="topnav"> 
+            <a href="../html/dashboard-student.html">Dashboard</a>
             <a href="../html/profile.html">Profile</a>
             <a href="../html/to-do.html" class="active">To-Do</a>
         </nav>
