--- a/html/to-do_overdue.html
+++ b/html/to-do_overdue.html
@@ -13,9 +13,8 @@
     <header>
         <a href="../html/dashboard-student.html">
         <h1>ActTrack</h1></a>
-        <nav class="topnav"> 
-            <a href="#">Attendance</a>
-            <a href="#">Grades</a>
+        <nav class="topnav">
+            <a href="../html/dashboard-student.html">Dashboard</a>
             <a href="../html/profile.html">Profile</a>
             <a href="../html/to-do.html" class="active">To-Do</a>
         </nav>
